# Trabalho-Pratico-pds1

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Testes e erros.md  Tests_n_errors.md  header.html  input.txt  log_04-06-2024_11-48-17.txt  log_15-06-2024_20-09-14.txt  log_15-06-2024_20-10-39.txt  log_15-06-2024_20-11-16.txt  log_15-06-2024_20-12-17.txt  log_15-06-2024_20-14-52.txt  main.c
.github/workflows/: codeql.yml  static.yml
html/: annotated.html  annotated_dup.js  classes.html  diagramas-mermaid-code.txt  diagramas-mermaid.json  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  globals.html  globals_func.html  graph_legend.html  graph_legend.md5  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_3.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_1.js  pages_2.js  (+4 more)
include/: definitions.h  file_utils.h  pok_utils.h
src/: definitions.h  file_utils.c  file_utils.h  main.c  pok_utils.c
utils/: definitions.h  file_utils.c  file_utils.h  pok_utils.c  pok_utils.h
(+67 files in other folders)
